test_scores/negative_dimers/features/Q96KS9.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q96KS9.pkl.xz